# COLA

./: .clang-tidy  CMakeLists.txt  COLA.cc  COLA.hh  LICENSE  LorentzVector.hh  README.md
COLA/: EventData.hh  LorentzVector.hh
cmake/: COLAQualityTools.cmake  uninstall.cmake
data/: config.sh
tests/: CMakeLists.txt  cola_test.cc  lorentz.cc
